// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can render an empty component 1`] = `
<Styled(Container)
  style={
    Object {
      "width": "100%",
    }
  }
  virtual={undefined}
>
  <Styled(Content)
    style={
      Array [
        Object {
          "backgroundColor": "#007DBA",
        },
        Object {
          "paddingTop": 64,
        },
      ]
    }
    virtual={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#007DBA",
          },
          Object {
            "paddingHorizontal": 30,
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/assets/images/FullLogo.png",
          }
        }
        style={
          Object {
            "marginBottom": 30,
          }
        }
      />
    </View>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`can render an empty header without back button 1`] = `
<Styled(Container)
  style={
    Object {
      "width": "100%",
    }
  }
  virtual={undefined}
>
  <Styled(Content)
    style={
      Array [
        Object {
          "backgroundColor": "#007DBA",
        },
        Object {
          "paddingTop": 64,
        },
      ]
    }
    virtual={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#007DBA",
          },
          Object {
            "paddingHorizontal": 30,
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/assets/images/FullLogo.png",
          }
        }
        style={
          Object {
            "marginBottom": 30,
          }
        }
      />
    </View>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`can render text with headerText 1`] = `
<Styled(Container)
  style={
    Object {
      "width": "100%",
    }
  }
  virtual={undefined}
>
  <Styled(Content)
    style={
      Array [
        Object {
          "backgroundColor": "#007DBA",
        },
        Object {
          "paddingTop": 64,
        },
      ]
    }
    virtual={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#007DBA",
          },
          Object {
            "paddingHorizontal": 30,
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/assets/images/FullLogo.png",
          }
        }
        style={
          Object {
            "marginBottom": 30,
          }
        }
      />
      <Styled(H3)
        style={
          Object {
            "color": "#FFFFFF",
            "textAlign": "center",
          }
        }
        virtual={undefined}
      >
         
        Thank you!
         
      </Styled(H3)>
    </View>
  </Styled(Content)>
</Styled(Container)>
`;

exports[`renders the back button on the screen 1`] = `
<Styled(Container)
  style={
    Object {
      "width": "100%",
    }
  }
  virtual={undefined}
>
  <Styled(Header)
    noShadow={true}
    style={
      Array [
        Object {
          "alignItems": "flex-start",
          "backgroundColor": "#007DBA",
          "borderBottomWidth": 0,
          "flexDirection": "column",
        },
      ]
    }
    virtual={undefined}
  >
    <Icon
      allowFontScaling={false}
      color="white"
      name="jbh-Chevron_Back"
      onPress={[Function]}
      size={20}
      style={
        Object {
          "color": "#FFFFFF",
        }
      }
    />
  </Styled(Header)>
  <Styled(Content)
    style={
      Array [
        Object {
          "backgroundColor": "#007DBA",
        },
        false,
      ]
    }
    virtual={undefined}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#007DBA",
          },
          Object {
            "paddingHorizontal": 30,
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/assets/images/FullLogo.png",
          }
        }
        style={
          Object {
            "marginBottom": 30,
          }
        }
      />
    </View>
  </Styled(Content)>
</Styled(Container)>
`;
